# Spin-Cube

./: CMakeLists.txt  Main.cpp
include/: Cube.hpp  Cube.tpp
include/glad/: glad.h
src/: Cube.cpp  glad.c
